--- a/test/test.html
+++ b/test/test.html
@@ -4,9 +4,11 @@
   </head>
   <body>
     <h1>H1 TEST</h1>
+    <img src="a/b/c.bmp" />
     <p>
     This is <strong>STRONG</strong>
     </p>
     <img alt="alt" src="foo/bar/baz.jpg" />
+    <img src="x/y/z.png" />
   </body>
 </html>
