--- a/test/test.html
+++ b/test/test.html
@@ -10,5 +10,9 @@
     </p>
     <img alt="alt" src="foo/bar/baz.jpg" />
     <img src="x/y/z.png" />
+    <a href="" rel="foo">link1</a>
+    <a href="">link2</a>
+    <a href="" rel="foo">link3</a>
+    <a href="">link4</a>
   </body>
 </html>
