--- a/test/test.html
+++ b/test/test.html
@@ -14,5 +14,9 @@
     <a href="">link2</a>
     <a href="" rel="foo">link3</a>
     <a href="">link4</a>
+    <strong>s1</strong>
+    <strong>s2</strong>
+    <strong>s3</strong>
+    <strong>s4</strong>
   </body>
 </html>
