--- a/test/test.html
+++ b/test/test.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>TEST TITLE</title>
+    <meta name="descriptions" content="">
   </head>
   <body>
     <h1>H1 TEST</h1>
